<resources>
    <string name="app_name">種天菜</string>
    <string name="login_google">Google 登入</string>
    <string name="login_facebook">Facebook 登入</string>
    <string name="login_fail_toast">登入失敗，請稍後再試</string>
    <string name="setting_dream_board">你的夢想版是空的 \n 快上傳你的夢想吧！</string>
    <string name="upload_dream_board">上傳夢想版</string>
    <string name="foodie_hello">Hi 今天吃得好嗎？</string>
    <string name="foodie_save">儲存</string>
    <string name="diary_title_sleep_time">睡眠時間</string>
    <string name="diary_title_mood_memo">心情小記</string>
    <string name="diary_title_nutrient">營養補充</string>
    <string name="linechart_tab_title_calendar">日曆檢視</string>
    <string name="linechart_tab_title_week">週變化</string>
    <string name="linechart_tab_title_month">月變化</string>
    <string name="title_foodie">新增食記</string>
    <string name="title_diary">日記</string>
    <string name="title_linechart">累積</string>
    <string name="title_achievement">成果</string>
    <string name="title_shape_record">新增成果</string>
    <string name="title_profile">個人</string>
    <string name="title_dream_puzzle">我的拼圖</string>
    <string name="title_sleep">新增睡眠</string>
    <string name="title_goal_setting">新增目標</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_greet">每天都值得把自己當成天菜來愛</string>
    <string name="foodie_title_nutrition">選擇營養</string>
    <string name="foodie_add_food">新增食物</string>
    <string name="foodie_upload_permission_hint">記得到系統設定相機和相簿權限才能上傳喔</string>
    <string name="foodie_show_gallery_select_picture">Select Picture</string>
    <string name="foodie_show_gallery_intent_type">image/*</string>
    <string name="foodie_start_camera_provider">.provider</string>
    <string name="foodie_start_camera_camera">Camera</string>
    <string name="foodie_start_camera_jpg">.jpg</string>
    <string name="shape_weight">體  重</string>
    <string name="shape_body_fat">體脂率</string>
    <string name="shape_body_water">含水量</string>
    <string name="shape_muscle">肌肉量</string>
    <string name="shape_tdee">日代謝</string>
    <string name="shape_body_age">體年齡</string>
    <string name="diary_title_today_record">今日食記</string>
    <string name="diary_title_today_compliment">今日成就</string>
    <string name="achivement_tab_list">紀錄表</string>
    <string name="achivement_tab_week">週變化</string>
    <string name="achivement_tab_month">月變化</string>
    <string name="achivement_title_date">日期</string>
    <string name="achivement_title_target">目標</string>
    <string name="achivement_title_steps">距離</string>
    <string name="profile_title_my_goal">我的目標</string>
    <string name="profile_button_logout">登出</string>
    <string name="profile_title_my_menu">我的菜單</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="sunday">日</string>
    <string name="diary_add_nutrition">新增營養</string>
    <string name="foodie_green_upload_photo">Hi 今天吃得好嗎？\n有圖有真相，上傳照片瞧瞧吧！</string>
    <string name="facebook_app_id">492524594814446</string>
    <string name="fb_login_protocol_scheme">fb492524594814446</string>
    <string name="internet_not_connected">當前網路不穩 請重新連線</string>
    <string name="sleep_record_bed_time">就寢</string>
    <string name="sleep_record_wake_time">起床</string>
    <string name="sleep_record_bed_time_long">就寢時間</string>
    <string name="sleep_record_wake_time_long">起床時間</string>
    <string name="sleep_record_hours">睡眠長度</string>
    <string name="sleep_record_hr">小時</string>
    <string name="sleep_record_min">分</string>
    <string name="diary_sleep_reminder">充足的睡眠也是讓身體獲得能量的重要來源\n今天睡得好嗎？</string>
    <string name="clean_data"></string>
    <string name="diary_title_shape">今日規格</string>
    <string name="foodie_drag_nutrition_hint">一鍵新增營養，也可以輸入新的營養喔！</string>
    <string name="foodie_drag_food_hint">一鍵新增餐點，也可以輸入新的餐點喔！</string>
    <string name="diary_hint_2_foodie">Hi 今天吃得好嗎？\n點選新增按鈕開始紀錄營養充滿的一天吧！</string>
    <string name="title_shape_record_info">紀錄成果</string>
    <string name="title_shape_record_choose_date">選擇日期</string>
    <string name="profile_title_set_date">目標宣言</string>
    <string name="network_check">當前網路不穩，請再次確認連線狀況</string>
    <string name="default_notification_channel_id">MyType</string>
    <string name="dialog_message_add_new_success">新增成功</string>
    <string name="dialog_message_goal_setting_failure">還有目標尚未完成\n請先確認進行中的目標喔！</string>
    <string name="profile_puzzle_info">新增七天食記\n獲得一片拼圖\n一起來蒐集！</string>
    <string name="goal_setting_hint_add_cheer_up">把目標具體化會更容易實現喔！</string>
    <string name="shaperecord_add_record_hint">這週還沒有紀錄\n開啟健康新生活就從記錄飲食開始\n趕快點選下方新增按鈕新增食記吧！</string>
    <string name="foodie_mood_hint">紀錄下努力的心得，也歡迎告解：）</string>
    <string name="achievement_add_record_hint">這個月還沒有紀錄 趕快去新增吧！</string>
    <string name="dialog_message_sleep_record_failure">還沒睡醒嗎？\n今天已新增過睡眠時間囉！</string>
    <string name="dialog_message_shape_record_failure">選擇日期已有成果\n可以到成果頁面確認喔！</string>
    <string name="title_just_goal">目標</string>
    <string name="foodie_water">水 份</string>
    <string name="foodie_fruit">水 果</string>
    <string name="foodie_vegetable">蔬 菜</string>
    <string name="foodie_oil">油 脂</string>
    <string name="foodie_protein">蛋白質</string>
    <string name="foodie_carbon">醣 類</string>
    <string name="shaperecord_edit_accumulation">修改成果</string>
    <string name="foodie_edit_foodie">修改食記</string>
    <string name="add_new_confirm">確認修改</string>
    <string name="profile_puzzle_first_congrat">恭喜你完成第一塊拼圖，健康生活的第一步就從解身體的渴開始</string>
    <string name="profile_puzzle_second_congrat">你知道酪梨含有滿滿的不飽和脂肪酸嗎？今天也來點好油脂吧！</string>
    <string name="foodie_add_photo">拍照</string>
    <string name="foodie_choose_from_gallery">選擇相片</string>
    <string name="foodie_cancel">取消</string>
    <string name="foodie_add_photo_title">新增照片</string>
    <string name="goal_hint_over_eat">有飲食指標超過囉～再檢查一下！</string>
    <string name="goal_setting_hint_over_shape">雖然肌肉量和體脂率都無法破百，但體重可以嗯嗯</string>
    <string name="profile_hint_add_goal">目前尚未新增目標\n點選下方按鈕去設定\n每日的飲食目標喔！</string>
    <string name="profile_hint_add_goal_postit">目前尚未新增目標\n點選下方按鈕可以\n設定每日的飲食目標喔！</string>
    <string name="shaperecord_input_hint">無法新增空白的成果，請再確認喔！</string>
    <string name="foodie_input_hint">這一餐攝取了多少營養呢？別忘了記錄下來</string>
    <string name="diary_title_sleep_today">今日睡眠</string>
    <string name="diary_dialog_sleep">睡眠圖示</string>
    <string name="goal_title_adjust_goal">修改目標</string>
    <string name="goalsetting_input_hint">無法新增空白的目標，請再確認喔！</string>
    <string name="achievement_blank_hint">努力的汗水不會白流\n今天是否又比昨天朝目標前進一點了呢？\n點選下方去新增按鈕新增成果的紀錄吧 ~</string>
    <string name="blank_hint_record">新增完的成果會顯示於下方，也可以點擊修改</string>
    <string name="blank_hint_record_foodie">新增完的每日食記總和會顯示於下方</string>
    <string name="diary_puzzle_check_new">歡迎加入種天菜行列\n你剛剛獲得一塊拼圖\n到個人頁面去看看吧</string>
    <string name="diary_puzzle_check_old">恭喜完成七天的紀錄\n你剛剛獲得一塊拼圖\n到個人頁面去看看吧</string>
    <string name="query_title_average">平均成就</string>
    <string name="login_success">登入成功\n歡迎回來</string>

    <string name="dialog_daily_reference">每日份量參考</string>
    <string name="dialog_body_reference">身體數據圖示</string>
    <string name="dialog_water">水分 : 240 毫升</string>
    <string name="dialog_oil">脂肪 : 一大匙</string>
    <string name="dialog_vegetable">蔬菜 : 一杯生蔬菜</string>
    <string name="dialog_protein">蛋白質 : 手掌大小</string>
    <string name="dialog_fruit">水果 : 中型水果</string>
    <string name="dialog_carbon">醣類 : 拳頭大小</string>
    <string name="dialog_image_definition">圖示說明</string>
    <string name="dialog_goal_number">目標份量</string>
    <string name="dialog_average_contribution">平均貢獻</string>
    <string name="dialog_nutrition_represent">代表營養</string>
    <string name="timestamp_dayend">%s 23:59:59.999999999</string>
    <string name="timestamp_daybegin">%s 00:00:00.000000000</string>
    <string name="year_month_date">%s-%s-%s</string>
    <string name="hour_minute">%s:%s</string>

    <string name="simpledateformat_yyyy_MM_dd">yyyy-MM-dd</string>
    <string name="simpledateformat_MM_dd">MM-dd</string>
    <string name="simpledateformat_yyyy_MM">yyyy-MM</string>
    <string name="simpledateformat_HH_mm">HH:mm</string>
    <string name="simpledateformat_HH_mm_ss_fffffffff">HH:mm:ss.%s</string>
    <string name="simpledateformat_yyyy_MM_dd_HHmmss">yyyy-MM-dd-HHmmss</string>
    <string name="simpledateformat_date_time_to_timestamp">%s %s:00.000000000</string>
    <string name="simpledateformat_yyyy_MM_dd_HH_mm_ss_fffffffff">yyyy-MM-dd HH:mm:ss.%s</string>


    <string name="float_round_one">%.1f</string>
    <string name="float_round_zero">%.0f</string>

    <string name="shape_example_weight">50.0</string>
    <string name="shape_example_bodyAge">19</string>
    <string name="shape_example_bodyWater">50.5</string>
    <string name="shape_example_bodyFat">23.5</string>
    <string name="shape_example_tdee">1215</string>
    <string name="shape_example_muscle">23.5</string>

    <string name="foodie_example_water">8.0</string>
    <string name="foodie_example_oil">0.5</string>
    <string name="foodie_example_fruit">2.0</string>
    <string name="foodie_example_vegetable">5.0</string>
    <string name="foodie_example_protein">2.0</string>
    <string name="foodie_example_carbon">0.5</string>

    <string name="firebase_docid">docId</string>
    <string name="hash_tag">#</string>
    <string name="firebase_storage_reference">images/users/%s/%s.jpg</string>

    <string name="notification_title">好的開始是成功的一半</string>
    <string name="notification_today_goal">距離今日目標\n</string>
    <string name="notification_goal_water">💧 飲水量還差 %s 份</string>
    <string name="notification_goal_water_reach">💧 飲水量完成 %s 份</string>
    <string name="notification_goal_oil">🥑 油脂還差 %s 份\n</string>
    <string name="notification_goal_oil_reach">🥑 油脂完成 %s 份\n</string>
    <string name="notification_goal_vegetable">🥦 蔬菜還差 %s 份</string>
    <string name="notification_goal_vegetable_reach">🥦 蔬菜完成 %s 份</string>
    <string name="notification_goal_protein">🍳 蛋白質還差 %s 份\n</string>
    <string name="notification_goal_protein_reach">🍳 蛋白質完成 %s 份\n</string>
    <string name="notification_goal_fruit">🍎 水果還差 %s 份</string>
    <string name="notification_goal_fruit_reach">🍎 水果完成 %s 份</string>
    <string name="notification_goal_carbon">🥔 醣類還差 %s 份\n💪 辛苦了，下午繼續加油！</string>
    <string name="notification_goal_carbon_reach">🥔 醣類完成 %s 份\n💪 辛苦了，下午繼續加油！</string>

    <string name="query_foodie_total_number">%d 篇食記</string>
    <string name="query_foodie_title">#%s</string>

    <string name="sleep_adjust_title">修改睡眠</string>

    <string name="foodie_foodlist_bento">便當</string>
    <string name="foodie_foodlist_sandwich">三明治</string>
    <string name="foodie_foodlist_pasta">義大利麵</string>
    <string name="foodie_nutritionlist_vitaminb">B群</string>
    <string name="foodie_nutritionlist_lutein">葉黃素</string>

</resources>
