<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/achivement_title_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/achivement_title_date"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_weight"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
        />
        <TextView
                android:text="@string/shape_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_weight"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_body_water"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/achivement_title_date" android:layout_marginStart="24dp"/>
        <TextView
                android:text="@string/shape_body_water"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_body_water"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/shaperecord_title_weight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_body_fat"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_weight"/>
        <TextView
                android:text="@string/shape_body_fat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_body_fat"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_body_water"
                app:layout_constraintStart_toEndOf="@+id/shaperecord_title_body_water"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_tdee"/>
        <TextView
                android:text="@string/shape_tdee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_tdee"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_muscle"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_body_fat"
                app:layout_constraintStart_toEndOf="@+id/shaperecord_title_body_fat"/>
        <TextView
                android:text="@string/shape_muscle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_muscle"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_tdee"
                app:layout_constraintStart_toEndOf="@+id/shaperecord_title_tdee"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_body_age"/>
        <TextView
                android:text="@string/shape_body_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/shaperecord_title_body_age"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="@+id/shaperecord_title_muscle"
                app:layout_constraintStart_toEndOf="@+id/shaperecord_title_muscle"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achivement_title_date"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp" android:id="@+id/recyclerView2"/>
        <TextView
                android:text="@string/achivement_title_steps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/achivement_title_steps"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_weight"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView2" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/achivement_title_target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/achivement_title_target"
                android:textSize="@dimen/text_content"
                android:textColor="@color/colorMyType"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/shaperecord_title_weight"
                app:layout_constraintTop_toBottomOf="@+id/achivement_title_steps" android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>