<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.terricom.mytype.diary.DiaryViewModel"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/white"
        android:orientation="vertical">

        <!-- date toolbar -->
        <RelativeLayout
                android:id="@+id/toolbarCurrentDate"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingLeft="@dimen/default_screen_padding"
                android:paddingTop="@dimen/_12sdp"
                android:paddingRight="@dimen/default_screen_padding"
                android:paddingBottom="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent">

            <!-- prev button -->
            <ImageView
                    android:id="@+id/toBack"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@mipmap/ic_arrow_left" android:tint="@color/colorMyType"/>

            <!-- date title -->
            <TextView
                    android:id="@+id/itemDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/toNext"
                    android:layout_toRightOf="@+id/toBack"
                    android:gravity="center"
                    android:text="2018.12"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorMyType"
                    android:letterSpacing="0.15" android:textStyle="bold"/>

            <!-- next button -->
            <ImageView
                    android:id="@+id/toNext"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?selectableItemBackgroundBorderless"
                    android:src="@mipmap/ic_forward"
                    android:visibility="invisible" android:tint="@color/colorMyType"/>
        </RelativeLayout>

        <!-- days header -->
        <LinearLayout
                android:id="@+id/calendarHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/toolbarCurrentDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/sunday"/>

            <TextView
                    style="@style/HorizontalBreakLine"
                    android:layout_marginStart="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_1sdp"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/monday"
            />


            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/tuesday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/wednesday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/thursday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/friday"
            />

            <TextView style="@style/HorizontalBreakLine"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="24dp"
                    android:layout_marginRight="@dimen/_1sdp"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:gravity="center_horizontal"
                    android:text="@string/saturday"
            />
        </LinearLayout>

        <!-- days view -->
        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@+id/calendarHeader"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginStart="16dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
