<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.terricom.mytype.login.LoginViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMyType">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/my_type"
                android:textSize="@dimen/size_my_type" android:text="@string/app_name"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/noto_sans"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/icon_my_type"
                android:id="@+id/logo_my_type"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/my_type"
                android:padding="@dimen/elevation_all"/>
        <Button
                android:text="@string/login_facebook"
                android:textStyle="bold"
                android:background="@drawable/login_facebook_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_login_facebook"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:textColor="@color/colorWhite"
                android:fontFamily="@font/noto_sans" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/login_greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite" android:id="@+id/login_greet"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/my_type"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>